# ootoc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aa
.github/workflows/: build.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  ootoc-logger.cpp  ootoc-opkgserver.cpp  ootoc-quickcurl.cpp  ootoc-tarovercurl.cpp  ootoc-tarparser.cpp  ootoc.cpp  ootoc.h
test/: CMakeLists.txt
test/data/: Packages.tar  Tar.yml  random.yml
test/src/: main-test.cxx  test-OpkgServer.cxx  test-QuickCurl.cxx  test-TarFileOpen.cxx  test-TarOverCurl.cxx  test-TarParser.cxx  test-toc.cxx
